2008-02-15  Sebastien Pouliot  <sebastien@ximian.com>

	* AssemblyResolver.cs: Handle GenericParameter.
	* Runner.cs: Handle the case where Mono.Cecil.Mdb.dll is not
	available.

2008-02-15  Sebastien Pouliot  <sebastien@ximian.com> 

	* Runner.cs: Expose CurrentRule and CurrentTarget
	* TestRunner.cs: Use newly exposed properties.

2008-02-15  Sebastien Pouliot  <sebastien@ximian.com>

	* MethodSignature.cs
	* MethodSignatures.cs
	* StackEntryAnalysis.cs:
		Moved into Gendarme.Framework.Helpers

2008-02-15  Sebastien Pouliot  <sebastien@ximian.com>

	* Runner.cs: Use Rocks to iterate all methods in a type.

2008-02-14  Sebastien Pouliot  <sebastien@ximian.com>

	* AssemblyResolver.cs: Shameless copy of Linker AssemblyResolver
	(with minimal changes) until Cecil got his own. Gendarme resolve
	will be done using rocks (so changes should not affect rules)

2008-02-14  Sebastien Pouliot  <sebastien@ximian.com> 

	* Defect.cs: Remove IMetadataTokenProviderRock (moved to 
	CecilRocks.cs). Add more logic to find source code associated
	with the defect (even if we don't have the instruction for it).
	* MinimalRunner.cs: Removed.
	* Runner.cs: Make some stuff internal for TestRunner.cs
	* TestRunner.cs: New. Runner useful for unit testing as it has
	some internal knowledge about Runner state and provide helpers.

2008-02-13  Sebastien Pouliot  <sebastien@ximian.com> 

	* Defect.cs: Merge Defect and Defect<T> into a non-generic class.
	* MinimalRunner.cs: Move Reset method to Runner.
	* Runner.cs: Adapt for Defect changes and add Reset method.

2008-02-12  Sebastien Pouliot  <sebastien@ximian.com> 

	* Defect.cs: Fix exception argument.
	* IRunner.cs: [ComVisible (false)] at class level (to be moved 
	to assembly-level). Use Cecil's IAnnotationProvider and change 
	back Assemblies to Collection<AssemblyDefinition>. Remove the 
	need to supply IRule to Report overloads (the runner knows which
	rules it is). Add CurrentRuleResult so it's easier to track 